--- a/baselib/src/main/res/anim/anim_slide_in_right.xml
+++ b/baselib/src/main/res/anim/anim_slide_in_right.xml
@@ -3,5 +3,6 @@
     <translate
         android:duration="300"
         android:fromXDelta="100.0%p"
+        android:interpolator="@android:anim/decelerate_interpolator"
         android:toXDelta="0.0" />
 </set>
