--- a/baselib/src/main/res/values/styles.xml
+++ b/baselib/src/main/res/values/styles.xml
@@ -8,6 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="BaseAppThemeWithActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 
     <!--滑动返回的Activity主题-->
     <style name="BaseAppTheme.SwipeBack" parent="BaseAppTheme">
