--- a/fungo/src/main/res/layout/base_fragment_page.xml
+++ b/fungo/src/main/res/layout/base_fragment_page.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolBarContainer" />
 
     <!--占位图容器-->
-    <com.fungo.baselib.view.placeholder.PlaceholderView
+    <com.fungo.baselib.base.page.PlaceholderView
         android:id="@+id/placeholder"
         android:layout_width="0dp"
         android:layout_height="0dp"
