--- a/fungo/src/main/res/layout/base_layout_place_holder.xml
+++ b/fungo/src/main/res/layout/base_layout_place_holder.xml
@@ -12,21 +12,35 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_delete" />
+        android:visibility="gone"
+        tools:visibility="visible">
 
 
         <TextView
+            android:id="@+id/tvError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:text="加载发生错误"
+            android:text="页面加载出现异常。"
             android:textColor="@color/text_black" />
+
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tvErrorRetry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/base_shape_btn_error_retry"
+            android:paddingLeft="16dp"
+            android:paddingTop="10dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="10dp"
+            android:text="点击重试"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
 
     </LinearLayout>
 
@@ -42,8 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="数据为空"
-            android:textColor="@color/text_black" />
+            android:text="数据为空，请稍后重试。" />
 
 
     </FrameLayout>
@@ -57,8 +70,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:visibility="gone">
 
 
         <ProgressBar
@@ -66,6 +78,7 @@
             android:layout_height="42dp" />
 
         <TextView
+            android:id="@+id/tvLoading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
